--- a/calcstyle.scss
+++ b/calcstyle.scss
@@ -1,12 +1,12 @@
 * {
   box-sizing: border-box;
-  font-size: 18px;
+  font-size: 30px;
 }
 
-
   header {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.25rem;
-    margin: 2em 4em 1em;
+    margin: 1rem;
   }
 
   .container {
@@ -15,7 +15,7 @@
     display: grid;
     height: 578px;
     justify-content: center;
-    margin: 0 4em;
+    margin: 1rem;
     width: 360px;
     
     .keypad {
@@ -27,11 +27,9 @@
       width: 316px;
 
       .key {
-        border: 2px solid grey;
-        border-radius: 8px;
-        display: grid;
+        @extend .container;
         height: 70px;
-        text-align: center;
+        margin: 0;
         width: 70px;
       }
 
