--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 * {
   box-sizing: border-box;
-  font-size: 18px; }
+  font-size: 30px; }
 
 header {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.25rem;
-  margin: 2em 4em 1em; }
+  margin: 1rem; }
 
-.container, .container .display {
+.container, .container .keypad .key, .container .display {
   border: 2px solid grey;
   border-radius: 8px;
   display: grid;
   height: 578px;
   justify-content: center;
-  margin: 0 4em;
+  margin: 1rem;
   width: 360px; }
-  .container .keypad {
+  .container .keypad, .container .keypad .key .keypad {
     display: grid;
     grid-gap: 12px;
     grid-template-columns: repeat(4, 1fr);
@@ -22,17 +23,14 @@ header {
     margin: 0 auto;
     width: 316px; }
     .container .keypad .key {
-      border: 2px solid grey;
-      border-radius: 8px;
-      display: grid;
       height: 70px;
-      text-align: center;
+      margin: 0;
       width: 70px; }
     .container .keypad .key[data-action="add"] {
       height: 152px;
       grid-column: 4/5;
       grid-row: 4/6; }
-  .container .display {
+  .container .display, .container .keypad .key .display {
     height: 120px;
     margin: 20px 20px 0 20px;
     width: 320px; }
